Increased available memory for ant junit testing.