@@ -633,7 +633,8 @@
 
 	<target name="unittests" depends="compile-tests" description="Runs the core Junit test cases">
 
-		<junit showoutput="yes" printsummary="yes" fork="yes" haltonfailure="no" haltonerror="no">
+		<junit showoutput="yes" printsummary="yes" fork="yes" haltonfailure="no" haltonerror="no" maxmemory="1500m">
+			<jvmarg value="-XX:MaxPermSize=512m"/>
 			<sysproperty key="test.data.path" value="${opencms.input}/test/data" />
 			<sysproperty key="test.webapp.path" value="${opencms.input}/webapp" />
 			<sysproperty key="test.build.folder" value="${opencms.output.tests}" />
